timers, fade animations working

--- a/template.html
+++ b/template.html
@@ -1,1 +1,27 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simple website</title>
+    <link rel="stylesheet" href="main.css">
+</head>
+<body class="bodyClass">
+    <div class="header">
+        <h1 id="headerTxt">
+            headerText_NOTPULLED
+        </h1>
+    </div>
+    <div class = "subText">
+        <h1 id="nextUpText">
+            nextUpText_NOTPULLED
+        </h1>
+        <h1 id="breakTimer">
+            breakTimer_NOTSET
+        </h1>
+    </div>
+    <script src="logic.js"></script>
+    <script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
+    <noscript>Javascript has been disabled, noscript message</noscript>
+</body>
