--- a/template.html
+++ b/template.html
@@ -21,6 +21,7 @@
 
         </h1>
     </div>
+    <script type='text/javascript' src='config.js'></script>
     <script src="logic.js"></script>
     <script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
     <noscript>Javascript has been disabled, noscript message</noscript>
